--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@angular/compiler": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
+    "@ionic-native/keyboard": "^5.26.0",
     "@ionic/angular-toolkit": "^2.1.1",
     "@ionic/lab": "^2.0.18",
     "@types/jasmine": "~3.3.8",
