--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "~8.1.2",
     "@angular/router": "~8.1.2",
     "@ionic-native/core": "^5.0.0",
+    "@ionic-native/dialogs": "^5.26.0",
     "@ionic-native/in-app-browser": "^5.25.0",
     "@ionic-native/splash-screen": "^5.0.0",
     "@ionic-native/status-bar": "^5.0.0",
+    "@ionic-native/streaming-media": "^5.26.0",
     "@ionic/angular": "^5.0.0",
     "core-js": "^2.5.4",
     "firebase": "^7.6.2",
