--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "@ionic/angular": "^5.0.0",
     "core-js": "^2.5.4",
     "firebase": "^7.6.2",
+    "ionic-context-menu": "^1.0.3",
+    "ionic-selectable": "^4.5.0",
     "rxjs": "~6.5.1",
     "tslib": "^1.9.0",
     "zone.js": "~0.9.1"
